--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.TOKEN }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: sh deploy.sh
     # steps:
     #   - name: 检查分支
