--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: sh deploy.sh
+          script: sh /home/deploy.sh
     # steps:
     #   - name: 检查分支
     #     uses: actions/checkout@v2
