--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,37 +8,30 @@ on:
     - published
 
 jobs:
-  check-branch:
+  deploy:
     runs-on: self-hosted
     steps:
       - name: 检查分支
         uses: actions/checkout@v2
         with:
           ref: master #2020年10月后github新建仓库默认分支改为main，注意更改
-      - name: create env file
+      - name: create mysql.config.ts file
       - run: |
           cd ../../src/config
           touch mysql.config.ts
-          echo MYSQL_USERNAME =${{ secrets.MYSQL_USERNAME }} >> .env
-          echo MYSQL_PWD =${{ secrets.MYSQL_PWD }} >> .env
-          echo MYSQL_DATABASE =${{ secrets.MYSQL_DATABASE }} >> .env
-          echo MYSQL_HOST =${{ secrets.MYSQL_HOST }} >> .env
-          echo MYSQL_PORT =${{ secrets.MYSQL_PORT }} >> .env
+          echo MYSQL_USERNAME =${{ secrets.MYSQL_USERNAME }} >> mysql.config.ts
+          echo MYSQL_PWD =${{ secrets.MYSQL_PWD }} >> mysql.config.ts
+          echo MYSQL_DATABASE =${{ secrets.MYSQL_DATABASE }} >> mysql.config.ts
+          echo MYSQL_HOST =${{ secrets.MYSQL_HOST }} >> mysql.config.ts
+          echo MYSQL_PORT =${{ secrets.MYSQL_PORT }} >> mysql.config.ts
 
       - name: 安装 Node
         uses: actions/setup-node@v1
         with:
           node-version: "14.x"
-
-      - name: 安装依赖
       - run: npm install
-
-      - name: 构建
       - run: npm run build --if-present
-
-      - name: 部署
       - run: pm2 restart App # add this new line
-
 
   # build:
   #   runs-on: ubuntu-latest
