--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,24 +52,30 @@ jobs:
         with:
           node-version: "14.x"
 
-      - name: 安装 Hexo
-        run: |
-          export TZ='Asia/Shanghai'
-          npm install hexo-cli -g
+      # - name: 安装 Hexo
+      #   run: |
+      #     export TZ='Asia/Shanghai'
+      #     npm install hexo-cli -g
 
-      - name: 缓存 Hexo
-        uses: actions/cache@v1
-        id: cache
-        with:
-          path: node_modules
-          key: ${{runner.OS}}-${{hashFiles('**/package-lock.json')}}
+      # - name: 缓存 Hexo
+      #   uses: actions/cache@v1
+      #   id: cache
+      #   with:
+      #     path: node_modules
+      #     key: ${{runner.OS}}-${{hashFiles('**/package-lock.json')}}
 
       - name: 安装依赖
-        if: steps.cache.outputs.cache-hit != 'true'
+        # if: steps.cache.outputs.cache-hit != 'true'
         run: |
           npm install --save
-      - run: npm run build --if-present
-      - run: pm2 restart App # add this new line
+
+      - name: 构建
+        run: |
+          npm run build --if-present
+
+      - name: 部署启动
+        run: |
+          pm2 restart App # add this new line
 
     #   - name: Set up SSH
     #     run: |
