--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
         "@midwayjs/bootstrap": "^3.0.0",
         "@midwayjs/core": "^3.0.0",
         "@midwayjs/decorator": "^3.0.0",
-        "@midwayjs/web": "^3.0.0",
         "@midwayjs/orm": "^3.0.0",
+        "@midwayjs/web": "^3.0.0",
+        "dotenv": "^16.0.0",
         "egg": "^2.0.0",
         "mysql2": "^2.3.3",
         "typeorm": "~0.3.0"
@@ -21,8 +22,8 @@
         "@types/node": "14",
         "cross-env": "^6.0.0",
         "egg-mock": "^3.26.0",
-        "mwts": "^1.0.5",
         "jest": "^26.4.0",
+        "mwts": "^1.0.5",
         "ts-jest": "^26.2.0",
         "typescript": "^4.0.0"
     },
