--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
         "@midwayjs/orm": "^3.0.0",
         "@midwayjs/swagger": "^3.3.5",
         "@midwayjs/web": "^3.0.0",
+        "bcryptjs": "^2.4.3",
         "dotenv": "^16.0.0",
         "egg": "^2.0.0",
+        "jsonwebtoken": "^8.5.1",
         "mysql2": "^2.3.3",
         "swagger-ui-dist": "^4.10.3",
         "typeorm": "~0.3.0"
@@ -20,7 +22,9 @@
         "@midwayjs/cli": "^1.0.0",
         "@midwayjs/egg-ts-helper": "^1.0.1",
         "@midwayjs/mock": "^3.0.0",
+        "@types/bcryptjs": "^2.4.2",
         "@types/jest": "^26.0.10",
+        "@types/jsonwebtoken": "^8.5.8",
         "@types/node": "14",
         "cross-env": "^6.0.0",
         "egg-mock": "^3.26.0",
